<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp1"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp2"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp3"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp4"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp5"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txt6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp6"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txt7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp7"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txt8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp8"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txt9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp9"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txt10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp10"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txt11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp11"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txt12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp12"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txt13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp13"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txt14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp14"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txt15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp15"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txt16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp16"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txt17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp17"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txt18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp18"
            android:textSize="40sp" />
        <TextView
            android:id="@+id/txt19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp19"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txt20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sp20"
            android:textSize="40sp" />

    </LinearLayout>
</ScrollView>